--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<h1>
-  {{title}}
-</h1>
+<md-toolbar color="primary">
+ <span><h2>{{title}}</h2> </span>
+ <app-home></app-home>
+</md-toolbar>
+<router-outlet></router-outlet>
