deleted some files

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <md-toolbar color="primary">
  <span><h2>{{title}}</h2> </span>
- <app-home></app-home>
+ <span class="head"><button md-button>HOME</button></span>
+ <span class="head"><button md-button>ABOUT</button></span>
+   <app-search></app-search>
 </md-toolbar>
 <router-outlet></router-outlet>
